--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -87,7 +87,10 @@
       "INFO:backoff:Backing off __init__(...) for 4.0s (requests.exceptions.ConnectionError: HTTPConnectionPool(host='139.144.66.193', port=8181): Max retries exceeded with url: /api.php (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fa46e9ad630>: Failed to establish a new connection: [Errno 111] Connection refused')))\n",
       "ERROR:root:Backing off 4.0 seconds afters 3 tries calling function with args (<wikibaseintegrator.wbi_login.Login object at 0x7fa4a41b64d0>,) and kwargs {'user': 'Admin', 'password': '90J8XXXaO4Sr9^^Z'}\n",
       "INFO:backoff:Backing off __init__(...) for 8.0s (requests.exceptions.ConnectionError: HTTPConnectionPool(host='139.144.66.193', port=8181): Max retries exceeded with url: /api.php (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fa47fce0a30>: Failed to establish a new connection: [Errno 111] Connection refused')))\n",
-      "ERROR:root:Backing off 8.0 seconds afters 4 tries calling function with args (<wikibaseintegrator.wbi_login.Login object at 0x7fa4a41b64d0>,) and kwargs {'user': 'Admin', 'password': '90J8XXXaO4Sr9^^Z'}\n"
+      "ERROR:root:Backing off 8.0 seconds afters 4 tries calling function with args (<wikibaseintegrator.wbi_login.Login object at 0x7fa4a41b64d0>,) and kwargs {'user': 'Admin', 'password': '90J8XXXaO4Sr9^^Z'}\n",
+      "WARNING:root:MediaWiki login warnings messages:\n",
+      "WARNING:root:* main: Subscribe to the mediawiki-api-announce mailing list at <https://lists.wikimedia.org/mailman/listinfo/mediawiki-api-announce> for notice of API deprecations and breaking changes.\n",
+      "WARNING:root:* login: Main-account login via \"action=login\" is deprecated and may stop working without warning. To continue login with \"action=login\", see [[Special:BotPasswords]]. To safely continue using main-account login, see \"action=clientlogin\".\n"
      ]
     }
    ],
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1c962b5b-aea4-474f-8081-86f80e146f83",
    "metadata": {},
    "outputs": [],
@@ -107,10 +110,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Family Name</th>\n",
+       "      <th>Birthdate</th>\n",
+       "      <th>Nationality</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Start date</th>\n",
+       "      <th>End date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S000001</td>\n",
+       "      <td>Mohammad Zain</td>\n",
+       "      <td>Abbas</td>\n",
+       "      <td>09/05/1995</td>\n",
+       "      <td>Pakistani</td>\n",
+       "      <td>SK-N3</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>06/09/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S000002</td>\n",
+       "      <td>Kainaat</td>\n",
+       "      <td>Amjid</td>\n",
+       "      <td>30/12/1996</td>\n",
+       "      <td>Pakistani</td>\n",
+       "      <td>SK-N1</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>13/09/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S000003</td>\n",
+       "      <td>Sergio</td>\n",
+       "      <td>Postigo</td>\n",
+       "      <td>12/02/1996</td>\n",
+       "      <td>Peru</td>\n",
+       "      <td>SK-N2</td>\n",
+       "      <td>26/07/2022</td>\n",
+       "      <td>13/10/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>S000004</td>\n",
+       "      <td>Emmanuel</td>\n",
+       "      <td>Jamin</td>\n",
+       "      <td>28/09/1978</td>\n",
+       "      <td>French</td>\n",
+       "      <td>SKL-N2</td>\n",
+       "      <td>10/01/2015</td>\n",
+       "      <td>11/01/2015</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Id           Name Family Name   Birthdate Nationality Category  \\\n",
+       "0  S000001  Mohammad Zain       Abbas  09/05/1995   Pakistani    SK-N3   \n",
+       "1  S000002        Kainaat       Amjid  30/12/1996   Pakistani    SK-N1   \n",
+       "2  S000003         Sergio     Postigo  12/02/1996        Peru    SK-N2   \n",
+       "3  S000004       Emmanuel       Jamin  28/09/1978      French   SKL-N2   \n",
+       "\n",
+       "   Start date    End date  \n",
+       "0  19/07/2022  06/09/2022  \n",
+       "1  19/07/2022  13/09/2022  \n",
+       "2  26/07/2022  13/10/2022  \n",
+       "3  10/01/2015  11/01/2015  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(team_data)\n",
     "df.head()"
@@ -118,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "10185833",
    "metadata": {},
    "outputs": [],
@@ -128,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "26ac174f",
    "metadata": {},
    "outputs": [],
@@ -172,10 +274,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f06af458",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 'Id' is mapped to 'P1'\n",
+      "Column 'Name' is mapped to 'P2'\n",
+      "Column 'Family Name' is mapped to 'P3'\n",
+      "Column 'Birthdate' is mapped to 'P4'\n",
+      "Column 'Nationality' is mapped to 'P5'\n",
+      "Column 'Category' is mapped to 'P6'\n",
+      "Column 'Start date' is mapped to 'P7'\n",
+      "Column 'End date' is mapped to 'P8'\n"
+     ]
+    }
+   ],
    "source": [
     "team_mapping = join(data_dir, \"team_mapping.csv\")\n",
     "create_mapping(team_mapping)"
@@ -183,10 +300,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a217f902",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 'Client Type' is mapped to 'P9'\n",
+      "Column 'Client' is mapped to 'P10'\n",
+      "Column 'Project' is mapped to 'P11'\n",
+      "Column 'Project Type' is mapped to 'P12'\n",
+      "Column 'Task' is mapped to 'P13'\n",
+      "Column 'Owner' is mapped to 'P14'\n",
+      "Column 'Member' is mapped to 'P15'\n",
+      "Column 'Duration (in days)' is mapped to 'P16'\n",
+      "Column 'Project Start date' is mapped to 'P17'\n",
+      "Column 'Project End date' is mapped to 'P18'\n"
+     ]
+    }
+   ],
    "source": [
     "project_mapping = join(data_dir, \"project_mapping.csv\")\n",
     "create_mapping(project_mapping)"
