--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -328,8 +328,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "65140de9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "101d422e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.append(dict({ 'a': 1, 'b': 2}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6713f1ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 2}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33ebce5b",
    "metadata": {},
    "outputs": [],
    "source": []
