Work in progress

--- a/notebooks/insert_corpus.ipynb
+++ b/notebooks/insert_corpus.ipynb
@@ -41,8 +41,9 @@
    "source": [
     "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, \"data\")\n",
-    "team_data = join(data_dir, \"BDMA_Team_v1.csv\")\n",
-    "project_data = join(data_dir, \"BDMA_Projects_v1.csv\")"
+    "team_data = join(data_dir, \"column_mapping.csv\")\n",
+    "team_data = join(data_dir, \"column_mapping.csv\")\n",
+    "team_data = join(data_dir, \"column_mapping.csv\")\n"
    ]
   },
   {
