--- a/notebooks/insert_corpus.ipynb
+++ b/notebooks/insert_corpus.ipynb
@@ -41,9 +41,9 @@
    "source": [
     "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, \"data\")\n",
-    "team_data = join(data_dir, \"column_mapping.csv\")\n",
-    "team_data = join(data_dir, \"column_mapping.csv\")\n",
-    "team_data = join(data_dir, \"column_mapping.csv\")\n"
+    "column_mapping = join(data_dir, \"column_mapping.csv\")\n",
+    "project_mapping = join(data_dir, \"project_mapping.csv\")\n",
+    "team_mapping = join(data_dir, \"team_mapping.csv\")"
    ]
   },
   {
