--- a/notebooks/insert_corpus.ipynb
+++ b/notebooks/insert_corpus.ipynb
@@ -82,13 +82,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:root:Backing off 1.0 seconds afters 1 tries calling function with args (<wikibaseintegrator.wbi_login.Login object at 0x7fa4a41b64d0>,) and kwargs {'user': 'Admin', 'password': '90J8XXXaO4Sr9^^Z'}\n",
-      "INFO:backoff:Backing off __init__(...) for 2.0s (requests.exceptions.ConnectionError: HTTPConnectionPool(host='139.144.66.193', port=8181): Max retries exceeded with url: /api.php (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fa46e9ace20>: Failed to establish a new connection: [Errno 111] Connection refused')))\n",
-      "ERROR:root:Backing off 2.0 seconds afters 2 tries calling function with args (<wikibaseintegrator.wbi_login.Login object at 0x7fa4a41b64d0>,) and kwargs {'user': 'Admin', 'password': '90J8XXXaO4Sr9^^Z'}\n",
-      "INFO:backoff:Backing off __init__(...) for 4.0s (requests.exceptions.ConnectionError: HTTPConnectionPool(host='139.144.66.193', port=8181): Max retries exceeded with url: /api.php (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fa46e9ad630>: Failed to establish a new connection: [Errno 111] Connection refused')))\n",
-      "ERROR:root:Backing off 4.0 seconds afters 3 tries calling function with args (<wikibaseintegrator.wbi_login.Login object at 0x7fa4a41b64d0>,) and kwargs {'user': 'Admin', 'password': '90J8XXXaO4Sr9^^Z'}\n",
-      "INFO:backoff:Backing off __init__(...) for 8.0s (requests.exceptions.ConnectionError: HTTPConnectionPool(host='139.144.66.193', port=8181): Max retries exceeded with url: /api.php (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fa47fce0a30>: Failed to establish a new connection: [Errno 111] Connection refused')))\n",
-      "ERROR:root:Backing off 8.0 seconds afters 4 tries calling function with args (<wikibaseintegrator.wbi_login.Login object at 0x7fa4a41b64d0>,) and kwargs {'user': 'Admin', 'password': '90J8XXXaO4Sr9^^Z'}\n",
       "WARNING:root:MediaWiki login warnings messages:\n",
       "WARNING:root:* main: Subscribe to the mediawiki-api-announce mailing list at <https://lists.wikimedia.org/mailman/listinfo/mediawiki-api-announce> for notice of API deprecations and breaking changes.\n",
       "WARNING:root:* login: Main-account login via \"action=login\" is deprecated and may stop working without warning. To continue login with \"action=login\", see [[Special:BotPasswords]]. To safely continue using main-account login, see \"action=clientlogin\".\n"
@@ -111,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
    "outputs": [
@@ -136,86 +129,135 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Family Name</th>\n",
-       "      <th>Birthdate</th>\n",
-       "      <th>Nationality</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Start date</th>\n",
-       "      <th>End date</th>\n",
+       "      <th>column</th>\n",
+       "      <th>prop</th>\n",
+       "      <th>data_type_x</th>\n",
+       "      <th>type_x</th>\n",
+       "      <th>mapping_code_x</th>\n",
+       "      <th>description_x</th>\n",
+       "      <th>alias_x</th>\n",
+       "      <th>data_type_y</th>\n",
+       "      <th>type_y</th>\n",
+       "      <th>mapping_code_y</th>\n",
+       "      <th>description_y</th>\n",
+       "      <th>alias_y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>S000001</td>\n",
-       "      <td>Mohammad Zain</td>\n",
-       "      <td>Abbas</td>\n",
-       "      <td>09/05/1995</td>\n",
-       "      <td>Pakistani</td>\n",
-       "      <td>SK-N3</td>\n",
-       "      <td>19/07/2022</td>\n",
-       "      <td>06/09/2022</td>\n",
+       "      <td>Id</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>string</td>\n",
+       "      <td>internal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Unique identifier for a SEMBU team member</td>\n",
+       "      <td>ID</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>S000002</td>\n",
-       "      <td>Kainaat</td>\n",
-       "      <td>Amjid</td>\n",
-       "      <td>30/12/1996</td>\n",
-       "      <td>Pakistani</td>\n",
-       "      <td>SK-N1</td>\n",
-       "      <td>19/07/2022</td>\n",
-       "      <td>13/09/2022</td>\n",
+       "      <td>Name</td>\n",
+       "      <td>P2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>external-id</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P735</td>\n",
+       "      <td>First name/given name of SEMBU team member</td>\n",
+       "      <td>First name</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>S000003</td>\n",
-       "      <td>Sergio</td>\n",
-       "      <td>Postigo</td>\n",
-       "      <td>12/02/1996</td>\n",
-       "      <td>Peru</td>\n",
-       "      <td>SK-N2</td>\n",
-       "      <td>26/07/2022</td>\n",
-       "      <td>13/10/2022</td>\n",
+       "      <td>Family Name</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>external-id</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P734</td>\n",
+       "      <td>Surname/Family name of SEMBU team member</td>\n",
+       "      <td>Last name</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>S000004</td>\n",
-       "      <td>Emmanuel</td>\n",
-       "      <td>Jamin</td>\n",
-       "      <td>28/09/1978</td>\n",
-       "      <td>French</td>\n",
-       "      <td>SKL-N2</td>\n",
-       "      <td>10/01/2015</td>\n",
-       "      <td>11/01/2015</td>\n",
+       "      <td>Birthdate</td>\n",
+       "      <td>P4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>external-id</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P569</td>\n",
+       "      <td>Date of birth</td>\n",
+       "      <td>DOB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nationality</td>\n",
+       "      <td>P5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>external-id</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P27</td>\n",
+       "      <td>Nationality of SEMBU team member</td>\n",
+       "      <td>Citizenship</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Id           Name Family Name   Birthdate Nationality Category  \\\n",
-       "0  S000001  Mohammad Zain       Abbas  09/05/1995   Pakistani    SK-N3   \n",
-       "1  S000002        Kainaat       Amjid  30/12/1996   Pakistani    SK-N1   \n",
-       "2  S000003         Sergio     Postigo  12/02/1996        Peru    SK-N2   \n",
-       "3  S000004       Emmanuel       Jamin  28/09/1978      French   SKL-N2   \n",
+       "        column prop data_type_x type_x mapping_code_x description_x alias_x  \\\n",
+       "0           Id   P1         NaN    NaN            NaN           NaN     NaN   \n",
+       "1         Name   P2         NaN    NaN            NaN           NaN     NaN   \n",
+       "2  Family Name   P3         NaN    NaN            NaN           NaN     NaN   \n",
+       "3    Birthdate   P4         NaN    NaN            NaN           NaN     NaN   \n",
+       "4  Nationality   P5         NaN    NaN            NaN           NaN     NaN   \n",
        "\n",
-       "   Start date    End date  \n",
-       "0  19/07/2022  06/09/2022  \n",
-       "1  19/07/2022  13/09/2022  \n",
-       "2  26/07/2022  13/10/2022  \n",
-       "3  10/01/2015  11/01/2015  "
+       "   data_type_y    type_y mapping_code_y  \\\n",
+       "0       string  internal            NaN   \n",
+       "1  external-id  external           P735   \n",
+       "2  external-id  external           P734   \n",
+       "3  external-id  external           P569   \n",
+       "4  external-id  external            P27   \n",
+       "\n",
+       "                                description_y      alias_y  \n",
+       "0   Unique identifier for a SEMBU team member           ID  \n",
+       "1  First name/given name of SEMBU team member   First name  \n",
+       "2    Surname/Family name of SEMBU team member    Last name  \n",
+       "3                               Date of birth          DOB  \n",
+       "4            Nationality of SEMBU team member  Citizenship  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(team_data)\n",
+    "df = pd.read_csv(column_mapping)\n",
+    "p_df = pd.read_csv(project_mapping)\n",
+    "t_df = pd.read_csv(team_mapping)\n",
+    "#merge the two dataframes\n",
+    "df = df.merge(p_df, on=\"column\", how=\"inner\")\n",
+    "df = df.merge(t_df, on=\"column\", how=\"inner\")\n",
     "df.head()"
    ]
   },
